Fixed list name alignment

--- a/styles/PublicQuestion.module.css
+++ b/styles/PublicQuestion.module.css
@@ -1,6 +1,5 @@
 .name {
-    overflow: hidden;
-    text-overflow: ellipsis;
+    display: flex;
     min-height: 24px;
 }
 
